[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/body/ovaries.png" type="Texture" id=2]
[ext_resource path="res://scenes/Celinha.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Ovaries.gd" type="Script" id=4]
[ext_resource path="res://scenes/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/xolonium-regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/BadMolecule.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/PauseOrgan.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/pause.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 6 )

[node name="Ovaries" type="Node2D"]
pause_mode = 1
script = ExtResource( 4 )
badMolecule = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 509, 302 )
scale = Vector2( 0.16, 0.138222 )
texture = ExtResource( 1 )

[node name="OvariesStaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="OvariesImage" type="Sprite" parent="OvariesStaticBody2D"]
position = Vector2( 534, 299 )
scale = Vector2( 1.12774, 1.12774 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OvariesStaticBody2D"]
build_mode = 1
polygon = PoolVector2Array( 536, 98, 487, 103, 440, 111, 394, 132, 374, 155, 363, 195, 373, 235, 412, 289, 454, 354, 462, 372, 467, 423, 467, 467, 491, 528, 584, 530, 603, 452, 607, 388, 611, 362, 646, 311, 681, 267, 705, 227, 704, 165, 675, 129, 621, 111 )

[node name="Celinha" parent="." instance=ExtResource( 3 )]
position = Vector2( 490, 224 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 533, 107 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 644, 278 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 530, 503 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 377, 193 )

[node name="ReturnButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 42.0
theme = SubResource( 5 )
text = "VOLTAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Score" parent="." instance=ExtResource( 5 )]
position = Vector2( -32, -176 )
scale = Vector2( 1.2, 1.2 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 904.0
margin_top = 485.0
margin_right = 1428.0
margin_bottom = 1003.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 8 )]

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="PauseButton" to="CanvasLayer/Pause" method="_on_PauseButton_pressed"]
